---
source: crates/pgls_pretty_print/tests/tests.rs
input_file: crates/pgls_pretty_print/tests/data/multi/plancache.sql
snapshot_kind: text
---
CREATE TEMPORARY TABLE pcachetest AS SELECT * FROM int8_tbl;

PREPARE prepstmt AS SELECT * FROM pcachetest;;

EXECUTE prepstmt;

PREPARE prepstmt2 (BIGINT) AS SELECT * FROM pcachetest WHERE q1 = $1;;

EXECUTE prepstmt2 (123);

DROP TABLE "pcachetest";

EXECUTE prepstmt;

EXECUTE prepstmt2 (123);

CREATE TEMPORARY TABLE pcachetest AS SELECT * FROM int8_tbl ORDER BY 2;

EXECUTE prepstmt;

EXECUTE prepstmt2 (123);

ALTER TABLE pcachetest
  ADD COLUMN q3 BIGINT;

EXECUTE prepstmt;

EXECUTE prepstmt2 (123);

ALTER TABLE pcachetest
  DROP COLUMN q3;

EXECUTE prepstmt;

EXECUTE prepstmt2 (123);

CREATE TEMPORARY VIEW pcacheview
AS SELECT * FROM pcachetest;

PREPARE vprep AS SELECT * FROM pcacheview;;

EXECUTE vprep;

CREATE OR REPLACE TEMPORARY VIEW pcacheview
AS SELECT q1, q2 / 2 AS q2 FROM pcachetest;

EXECUTE vprep;

CREATE FUNCTION cache_test(INT)
RETURNS INT
AS '
declare total int;
begin
	create temp table t1(f1 int);
	insert into t1 values($1);
	insert into t1 values(11);
	insert into t1 values(12);
	insert into t1 values(13);
	select sum(f1) into total from t1;
	drop table t1;
	return total;
end
'
LANGUAGE "plpgsql";

SELECT cache_test(1);

SELECT cache_test(2);

SELECT cache_test(3);

CREATE TEMPORARY VIEW v1
AS SELECT 2 + 2 AS f1;

CREATE FUNCTION cache_test_2()
RETURNS INT
AS '
begin
	return f1 from v1;
end'
LANGUAGE "plpgsql";

SELECT cache_test_2();

CREATE OR REPLACE TEMPORARY VIEW v1
AS SELECT 2 + 2 + 4 AS f1;

SELECT cache_test_2();

CREATE OR REPLACE TEMPORARY VIEW v1
AS SELECT
  2 + 2 + 4 +
  (SELECT MAX(unique1) FROM tenk1)
  AS f1;

SELECT cache_test_2();

CREATE SCHEMA "s1";

CREATE TABLE abc (f1 INT);

CREATE SCHEMA "s2";

CREATE TABLE abc (f1 INT);

INSERT INTO s1.abc VALUES (123);

INSERT INTO s2.abc VALUES (456);

SET search_path TO s1;

PREPARE p1 AS SELECT f1 FROM abc;;

EXECUTE p1;

SET search_path TO s2;

SELECT f1 FROM abc;

EXECUTE p1;

ALTER TABLE s1.abc
  ADD COLUMN f2 DOUBLE PRECISION;

EXECUTE p1;

DROP SCHEMA s1 CASCADE;

DROP SCHEMA s2 CASCADE;

RESET search_path;

CREATE TEMPORARY SEQUENCE seq;

PREPARE p2 AS SELECT nextval('seq');;

EXECUTE p2;

DROP SEQUENCE "seq";

CREATE TEMPORARY SEQUENCE seq;

EXECUTE p2;

CREATE FUNCTION cachebug()
RETURNS VOID
AS '
declare r int;
begin
  drop table if exists temptable cascade;
  create temp table temptable as select * from generate_series(1,3) as f1;
  create temp view vv as select * from temptable;
  for r in select * from vv loop
    raise notice ''%'', r;
  end loop;
end'
LANGUAGE "plpgsql";

SELECT cachebug();

SELECT cachebug();

CREATE TABLE pc_list_parted (a INT)
PARTITION BY LIST(a);

CREATE TABLE pc_list_part_null PARTITION OF pc_list_parted FOR VALUES IN (NULL);

CREATE TABLE pc_list_part_1 PARTITION OF pc_list_parted FOR VALUES IN (1);

CREATE TABLE pc_list_part_def PARTITION OF pc_list_parted DEFAULT;

INSERT INTO pc_list_part_def VALUES ($1);

EXECUTE pstmt_def_insert (NULL);

EXECUTE pstmt_def_insert (1);

CREATE TABLE pc_list_part_2 PARTITION OF pc_list_parted FOR VALUES IN (2);

EXECUTE pstmt_def_insert (2);

ALTER TABLE pc_list_parted
  DETACH PARTITION
  pc_list_part_null;

EXECUTE pstmt_def_insert (NULL);

DROP TABLE "pc_list_part_1";

EXECUTE pstmt_def_insert (1);

DROP TABLE "pc_list_parted", "pc_list_part_null";

DEALLOCATE pstmt_def_insert;

CREATE TABLE test_mode (a INT);

INSERT INTO test_mode SELECT 1 FROM generate_series(1, 1000) UNION ALL SELECT 2;

CREATE INDEX ON test_mode USING btree (a);

ANALYZE test_mode;

PREPARE test_mode_pp (INT) AS SELECT COUNT(*) FROM test_mode WHERE a = $1;;

SELECT
  name,
  generic_plans,
  custom_plans
FROM
  pg_prepared_statements
WHERE
  name = 'test_mode_pp';

SET plan_cache_mode = auto;

EXPLAIN (COSTS 'off') EXECUTE test_mode_pp (2);

SELECT
  name,
  generic_plans,
  custom_plans
FROM
  pg_prepared_statements
WHERE
  name = 'test_mode_pp';

SET plan_cache_mode = force_generic_plan;

EXPLAIN (COSTS 'off') EXECUTE test_mode_pp (2);

SELECT
  name,
  generic_plans,
  custom_plans
FROM
  pg_prepared_statements
WHERE
  name = 'test_mode_pp';

SET plan_cache_mode = auto;

EXECUTE test_mode_pp (1);

EXECUTE test_mode_pp (1);

EXECUTE test_mode_pp (1);

EXECUTE test_mode_pp (1);

SELECT
  name,
  generic_plans,
  custom_plans
FROM
  pg_prepared_statements
WHERE
  name = 'test_mode_pp';

EXECUTE test_mode_pp (1);

SELECT
  name,
  generic_plans,
  custom_plans
FROM
  pg_prepared_statements
WHERE
  name = 'test_mode_pp';

EXPLAIN (COSTS 'off') EXECUTE test_mode_pp (2);

SET plan_cache_mode = force_custom_plan;

EXPLAIN (COSTS 'off') EXECUTE test_mode_pp (2);

SELECT
  name,
  generic_plans,
  custom_plans
FROM
  pg_prepared_statements
WHERE
  name = 'test_mode_pp';

DROP TABLE "test_mode";
